fix overflow issue on main style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,5 +46,5 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   line-height: 1.5;
-  overflow-x: hidden;
+  overflow: hidden;
 }
